--- a/ui/index.html
+++ b/ui/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1v1 德州扑克助手</title>
+    <title>1v1 Poker Assistant</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>1v1 德州扑克助手</h1>
+        <h1>1v1 Poker Assistant</h1>
 
         <!-- 玩家手牌输入 -->
         <div class="player-hand">
-            <h2>你的手牌</h2>
+            <h2>Your card</h2>
             <div class="cards">
                 <div class="card" id="player-card-1" onclick="selectCard('player-card-1')">?</div>
                 <div class="card" id="player-card-2" onclick="selectCard('player-card-2')">?</div>
@@ -21,7 +21,7 @@
 
         <!-- 公共牌输入 -->
         <div class="board">
-            <h2>公共牌</h2>
+            <h2>Community Card</h2>
             <div class="cards">
                 <div class="card locked" id="board-card-1" onclick="selectCard('board-card-1')">?</div>
                 <div class="card locked" id="board-card-2" onclick="selectCard('board-card-2')">?</div>
@@ -33,19 +33,19 @@
 
         <!-- 选择框（花色 + 数字） -->
         <div id="selection-popup" class="popup">
-            <h3>选择牌</h3>
-            <label for="suit">花色:</label>
+            <h3>Select</h3>
+            <label for="suit">Suit</label>
             <select id="suit">
-                <option value="">请选择</option>
+                <option value="">Select</option>
                 <option value="♠️">♠️</option>
                 <option value="♥️">♥️</option>
                 <option value="♦️">♦️</option>
                 <option value="♣️">♣️</option>
             </select>
 
-            <label for="rank">数字:</label>
+            <label for="rank">Rank:</label>
             <select id="rank">
-                <option value="">请选择</option>
+                <option value="">Select</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
                 <option value="4">4</option>
@@ -61,31 +61,31 @@
                 <option value="A">A</option>
             </select>
 
-            <button onclick="confirmSelection()">确认</button>
+            <button onclick="confirmSelection()">Enter</button>
         </div>
 
         <!-- AI 计算结果 -->
         <div class="ai-info">
-            <h2>AI 计算结果</h2>
-            <p>当前胜率: <span id="win-rate">?</span>%</p>
-            <p>建议行动: <span id="ai-action">等待中...</span></p>
+            <h2>AI Calculation</h2>
+            <p>Winning Possibility: <span id="win-rate">?</span></p>
+            <p>Suggest Action: <span id="ai-action">Waiting...</span></p>
         </div>
 
         <!-- 计算胜率按钮 -->
         <div class="actions">
-            <button id="calculate-btn" onclick="sendToServer()">计算胜率</button>
+            <button id="calculate-btn" onclick="sendToServer()">Calculate</button>
         </div>
     </div>
 
     <!-- 资金 & 下注信息 -->
     <div class="betting-info">
-        <label for="pot">Pot (彩池):</label>
+        <label for="pot">Pot:</label>
         <input type="number" id="pot" value="0" min="0">
 
-        <label for="opponent-bet">Opponent Bet (对手下注):</label>
+        <label for="opponent-bet">Opponent Bet:</label>
         <input type="number" id="opponent-bet" value="0" min="0">
 
-        <label for="bankroll">Bankroll (资金):</label>
+        <label for="bankroll">Bankroll:</label>
         <input type="number" id="bankroll" value="1000" min="0">
     </div>
 
